--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,10 +3,17 @@
   "name": "Hello Extensions testing",
   "description": "Base Level Extension",
   "version": "1.0",
-  "permissions": ["declarativeContent", "activeTab"],
+  "permissions": ["scripting", "storage"],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content-script.js"]
+    }
+  ],
   "action": {
     "default_popup": "hello.html",
     "default_title": "This is my default title!",
