--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "type": "module",
-  "packageManager": "yarn@3.3.1",
-  "devDependencies": {
-    "@types/chrome": "^0.0.206",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.8.1",
-    "typescript": "^4.9.4"
-  }
+  "private": true,
+  "name": "workspace",
+  "version": "0.0.1",
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "workspaces": [
+    "extension",
+    "api"
+  ],
+  "author": "",
+  "license": "MIT",
+  "packageManager": "yarn@3.3.1"
 }
