--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,6 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
-    "jsdom": "^20.0.3",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,6 +23,7 @@
   },
   "devDependencies": {
     "@types/jsdom": "^20.0.1",
+    "cheerio": "^1.0.0-rc.12",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.1"
   }
