--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   ],
   "author": "",
   "license": "MIT",
-  "packageManager": "yarn@3.3.1"
+  "packageManager": "yarn@3.3.1",
+  "resolutions": {
+    "cheerio@^1.0.0-rc.12": "patch:cheerio@npm%3A1.0.0-rc.12#./.yarn/patches/cheerio-npm-1.0.0-rc.12-6785a97c2a.patch"
+  }
 }
