--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -9,6 +9,7 @@
   "rules": {
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-empty-function": "off",
     "import/order": [
       "error",
       {
