--- a/api/package.json
+++ b/api/package.json
@@ -22,9 +22,12 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@types/jsdom": "^20.0.1",
+    "autoprefixer": "^10.4.13",
     "cheerio": "^1.0.0-rc.12",
-    "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.8.1"
+    "eslint-config-prettier": "^8.6.0",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.2",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "tailwindcss": "^3.2.4"
   }
 }
