--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "import"],
+  "plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
@@ -9,28 +9,6 @@
   "rules": {
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/no-empty-function": "off",
-    "import/order": [
-      "error",
-      {
-        "groups": ["builtin", ["external"], ["sibling", "parent", "index"]],
-        "newlines-between": "always",
-        "alphabetize": {
-          "order": "asc"
-        }
-      }
-    ]
-  },
-  "settings": {
-    "import/resolver": {
-      "typescript": true,
-      "node": true
-    }
-  },
-  "env": {
-    "browser": true
-  },
-  "globals": {
-    "chrome": "readonly"
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
