--- a/extension/package.json
+++ b/extension/package.json
@@ -1,13 +1,19 @@
 {
   "type": "module",
   "packageManager": "yarn@3.3.1",
+  "scripts": {
+    "build": "tsc && vite build"
+  },
   "devDependencies": {
-    "@types/chrome": "^0.0.206",
+    "@types/webextension-polyfill": "^0.10.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.27.5",
     "prettier": "^2.8.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vite": "^4.0.4",
+    "webextension-polyfill": "^0.10.0"
   }
 }
