--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -10,5 +10,10 @@
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-empty-function": "off"
-  }
+  },
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "ignorePatterns": ["dist/**/*"]
 }
