--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -11,7 +11,7 @@
   "content_scripts": [
     {
       "matches": ["https://*/*", "http://*/*"],
-      "js": ["content-script.js"]
+      "js": ["webextension-polyfill.js", "content-script.js"]
     }
   ],
   "icons": {
@@ -19,7 +19,7 @@
     "256": "icon256.png"
   },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "src/popup.html",
     "default_title": "StreetPass",
     "default_icon": "action-inactive.png"
   }
