--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -9,7 +9,8 @@
   "rules": {
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/no-empty-function": "off"
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "env": {
     "browser": true,
