--- a/extension/package.json
+++ b/extension/package.json
@@ -3,16 +3,16 @@
   "packageManager": "yarn@3.3.1",
   "scripts": {
     "build": "tsc && yarn build:chrome",
-    "build:chrome": "vite build --config vite.config.chrome.ts"
+    "build:chrome": "vite build --config vite.config.chrome.ts && node ./build-manifest-chrome.js"
   },
   "devDependencies": {
     "@types/webextension-polyfill": "^0.10.0",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.3",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "webextension-polyfill": "^0.10.0"
