--- a/extension/.eslintrc.json
+++ b/extension/.eslintrc.json
@@ -19,5 +19,5 @@
   "globals": {
     "browser": "readonly"
   },
-  "ignorePatterns": ["dist/**/*"]
+  "ignorePatterns": ["dist-chrome/**/*", "dist-firefox/**/*"]
 }
