--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -18,5 +18,5 @@
     "noImplicitAny": true
   },
   "include": ["./**/*"],
-  "exclude": ["node_modules", "dist-chrome"]
+  "exclude": ["node_modules", "dist-chrome", "dist-firefox"]
 }
