--- a/extension/package.json
+++ b/extension/package.json
@@ -3,8 +3,8 @@
   "packageManager": "yarn@3.3.1",
   "scripts": {
     "build": "tsc && yarn build:chrome && yarn build:firefox",
-    "build:chrome": "vite build --config vite.config.chrome.ts && node ./build-manifest-chrome.js",
-    "build:firefox": "vite build --config vite.config.firefox.ts && node ./build-manifest-firefox.js"
+    "build:chrome": "vite build --config vite.config.chrome.ts",
+    "build:firefox": "vite build --config vite.config.firefox.ts"
   },
   "devDependencies": {
     "@types/webextension-polyfill": "^0.10.0",
