--- a/extension/package.json
+++ b/extension/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
-    "webextension-polyfill": "^0.10.0"
+    "webextension-polyfill": "^0.10.0",
+    "zod": "^3.20.6"
   }
 }
