--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -8,8 +8,8 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "esnext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
@@ -19,5 +19,5 @@
     "exactOptionalPropertyTypes": true
   },
   "include": ["./**/*"],
-  "exclude": ["node_modules", "dist-chrome", "dist-firefox"]
+  "exclude": ["node_modules", "dist-chrome", "dist-firefox", "dist-safari"]
 }
