--- a/extension/package.json
+++ b/extension/package.json
@@ -25,6 +25,7 @@
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.5",
     "tailwindcss": "^3.2.4",
+    "ts-essentials": "^9.3.1",
     "typescript": "^4.9.4",
     "vite": "^4.1.4",
     "webextension-polyfill": "^0.10.0",
