--- a/extension/package.json
+++ b/extension/package.json
@@ -5,31 +5,29 @@
     "build": "tsc && yarn build:chrome && yarn build:firefox && yarn build:safari",
     "build:chrome": "vite build --config vite.config.chrome.ts",
     "build:firefox": "vite build --config vite.config.firefox.ts",
-    "build:safari": "yarn build:safari:background && yarn build:safari:main",
-    "build:safari:main": "vite build --config vite.config.safari.ts",
-    "build:safari:background": "vite build --config vite.config.safari-background.ts"
+    "build:safari": "vite build --config vite.config.safari.ts"
   },
   "devDependencies": {
-    "@types/react": "^18.0.29",
+    "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
     "@types/webextension-polyfill": "^0.10.0",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.30.0",
-    "eslint-config-prettier": "^8.6.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "prettier-plugin-tailwindcss": "^0.2.5",
-    "tailwindcss": "^3.2.4",
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.7",
+    "tailwindcss": "^3.3.1",
     "ts-essentials": "^9.3.1",
     "typescript": "^4.9.4",
     "vite": "^4.1.4",
     "webextension-polyfill": "^0.10.0",
-    "zod": "^3.20.6"
+    "zod": "^3.21.4"
   },
   "dependencies": {
     "react": "^18.2.0",
