--- a/api/package.json
+++ b/api/package.json
@@ -12,12 +12,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.16.0",
-    "@types/react": "18.0.38",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
-    "next": "13.3.1",
+    "@types/node": "^18.16.0",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "18.2.7",
+    "eslint": "8.46.0",
+    "eslint-config-next": "13.4.12",
+    "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4",
@@ -27,11 +27,11 @@
     "activitypub-core-types": "^0.3.2",
     "autoprefixer": "^10.4.14",
     "cheerio": "^1.0.0-rc.12",
-    "eslint-config-prettier": "^8.8.0",
-    "postcss": "^8.4.23",
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.7",
-    "tailwindcss": "^3.3.1",
-    "vercel": "^28.20.0"
+    "eslint-config-prettier": "^9.0.0",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "tailwindcss": "^3.3.3",
+    "vercel": "^31.2.2"
   }
 }
