--- a/extension/package.json
+++ b/extension/package.json
@@ -30,6 +30,8 @@
     "zod": "^3.21.4"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "csv-stringify": "^6.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3"
