--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@activity-kit/types": "^0.4.56",
     "@types/node": "^18.16.0",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -24,7 +25,6 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "activitypub-core-types": "^0.3.2",
     "autoprefixer": "^10.4.14",
     "cheerio": "^1.0.0-rc.12",
     "eslint-config-prettier": "^9.0.0",
