--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "name": "workspace",
   "version": "0.0.1",
   "description": "",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
