--- a/site/package.json
+++ b/site/package.json
@@ -29,7 +29,6 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.4.1",
-    "tailwindcss": "^3.3.3",
-    "vercel": "^31.2.2"
+    "tailwindcss": "^3.3.3"
   }
 }
