--- a/extension/package.json
+++ b/extension/package.json
@@ -31,8 +31,8 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@tanstack/react-query": "^4.35.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.3"
+    "react-dom": "^18.2.0"
   }
 }
