--- a/extension/package.json
+++ b/extension/package.json
@@ -27,12 +27,14 @@
     "typescript": "5.1.6",
     "vite": "^4.4.9",
     "webextension-polyfill": "^0.10.0",
-    "zod": "^3.21.4"
+    "zod": "^3.22.2"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@tanstack/react-query": "^4.35.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-query-kit": "^2.0.0"
   }
 }
