--- a/extension/package.json
+++ b/extension/package.json
@@ -30,10 +30,13 @@
     "zod": "^3.22.2"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^4.35.3",
+    "class-variance-authority": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-intersection-observer": "^9.5.2",
     "react-query-kit": "^2.0.0"
   }
