--- a/extension/package.json
+++ b/extension/package.json
@@ -5,7 +5,8 @@
     "build": "tsc && yarn build:chrome && yarn build:firefox && yarn build:safari",
     "build:chrome": "vite build --config vite.config.chrome.ts",
     "build:firefox": "vite build --config vite.config.firefox.ts",
-    "build:safari": "vite build --config vite.config.safari.ts"
+    "build:safari": "vite build --config vite.config.safari.ts",
+    "gen:colors": "node scripts/gen-colors.js"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
@@ -20,6 +21,7 @@
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.29",
+    "postcss-import": "^15.1.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "tailwindcss": "^3.3.3",
@@ -30,6 +32,7 @@
     "zod": "^3.22.2"
   },
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-query": "^4.35.3",
