--- a/site/package.json
+++ b/site/package.json
@@ -13,13 +13,13 @@
   },
   "dependencies": {
     "@types/node": "^18.16.0",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.12",
     "next": "13.4.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
   },
