--- a/site/package.json
+++ b/site/package.json
@@ -17,10 +17,10 @@
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.46.0",
     "eslint-config-next": "^13.4.12",
-    "next": "^13.4.12",
+    "next": "13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "5.1.6",
+    "typescript": "5.2.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
