--- a/extension/package.json
+++ b/extension/package.json
@@ -1,6 +1,9 @@
 {
   "type": "module",
   "packageManager": "yarn@3.3.1",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "build": "tsc && yarn build:chrome && yarn build:firefox && yarn build:safari",
     "build:chrome": "vite build --config vite.config.chrome.ts",
@@ -9,27 +12,27 @@
     "gen:colors": "node scripts/gen-colors.js"
   },
   "devDependencies": {
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@types/webextension-polyfill": "^0.10.2",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "@vitejs/plugin-react": "^4.0.4",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@types/webextension-polyfill": "^0.10.7",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.5",
-    "tailwindcss": "^3.3.3",
-    "ts-essentials": "^9.4.0",
-    "typescript": "5.2.2",
-    "vite": "^4.4.9",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.4.0",
+    "ts-essentials": "^9.4.1",
+    "typescript": "5.3.3",
+    "vite": "^5.0.10",
     "webextension-polyfill": "^0.10.0",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   },
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
